--- a/BookStore2/wwwroot/AdminLTE-3.2.0/AdminLTE-3.2.0/starter.html
+++ b/BookStore2/wwwroot/AdminLTE-3.2.0/AdminLTE-3.2.0/starter.html
@@ -258,8 +258,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
       <div class="container-fluid">
         <div class="row">
           <div class="col-lg-6">
-            <div class="card">
-              <div class="card-body">
+--              <div class="card-body">
                 <h5 class="card-title">Card title</h5>
 
                 <p class="card-text">
